Add axon server service and integrate axon framework in the app

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,17 @@ repositories {
 	mavenCentral()
 }
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.boot:spring-boot-dependencies:${spring_boot_version}"
+		mavenBom "org.axonframework:axon-bom:${axon_framework_version}"
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.axonframework:axon-spring-boot-starter'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 }
