--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ dependencyManagement {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.axonframework:axon-spring-boot-starter'
+	implementation 'org.axonframework.extensions.reactor:axon-reactor-spring-boot-starter'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
